# pdf-agent-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  env.example  pyproject.toml
.github/workflows/: deploy.yml
eval/: __init__.py  eval_set.jsonl  evaluate.py  run_eval.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: main.py  prompts.py  settings.py  visual_qa.py
